[tool.poetry]
name = "trello-export"
version = "0.1.0"
description = ""
authors = ["Grzegorz Mrukwa <g.mrukwa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.78.0"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
